--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/grupo_wl_database
-spring.datasource.username=postgres
-spring.datasource.password=1234567
+spring.datasource.url=${DATABASE_URL}
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-jwt.secret=MYJWTSECRET
-jwt.expiration=3600000
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
