Mudar para prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://postgres:ttAv5ehSExQfsbP3yCZB@containers-us-west-144.railway.app:5898/railway
 
 
 spring.jpa.hibernate.ddl-auto=none
