Mudando para railway

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:ttAv5ehSExQfsbP3yCZB@containers-us-west-144.railway.app:5898/railway
-
+spring.datasource.url=${DATABASE_URL}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
